--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Instalar Surge
         run: npm install -g surge
 
-      - name: Desplegar a Surge
-        run: surge ./ https://mi-pagina-web.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      - name: Desplegar a Surge con un dominio único
+        run: surge ./ https://mi-pagina-web-${{ github.run_id }}.surge.sh --token ${{ secrets.SURGE_TOKEN }}
